# Eidomatica

./: CMakeLists.txt  Eidomatica.nb  PacletInfo.m  README.md  converter.py  docbuild.xml  tracking  tracking-script.m
Eidomatica/: ActiveContours.m  Eidomatica.m  ImageProcessing.m  Import.m  Internal.m  MarkovRandomFields.m  OpticalFlow.m  Tracking.m  TrackingAnalysis.m  TrackingExport.m  TrackingImport.m  TrackingUtilities.m  Transformation.m  Utilities.m  Visualization.m  ZebrafishAnalysis.m
Eidomatica/Documentation/English/ReferencePages/Symbols/: AbortWhenOverride.nb  AlignContour.nb  AlignContours.nb  AlignControlPoints.nb  ArcLengthReparameterization.nb  BandWidth.nb  BitDepth.nb  BoundaryCondition.nb  CellDensityMatrix.nb  CenterAndNormalize.nb  CentralMeridian.nb  Chunks.nb  ClipAtStartEnd.nb  ClosedContour.nb  ComplexRepresentation.nb  ConstraintType.nb  CounterClockwise.nb  CreateMask.nb  Dimension.nb  EdgeDetector.nb  ExportFormat.nb  Feature.nb  FileNameDivision.nb  FiniteDifferences.nb  FishyPlot.nb  From.nb  GlobalBounds.nb  GradientVectorField.nb  GradientVectorFieldSnake.nb  IncludeAppearingCells.nb  InitialLabelMatrix.nb  InitializationVectorField.nb  IntegerCheck.nb  Interpolated.nb  InterpolationMethod.nb  IsBoolean.nb  IsPositive.nb  IsVectorField.nb  Iterations.nb  LabelSize.nb  (+95 more)
Eidomatica/Kernel/: init.m
Eidomatica/color_maps/: brewer.wdx  nature_color.csv
